cli/tests/snapshots/cli__repl_error_expr.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Unknown variable
  ┌─ <repl>:1:1
  │
1 │ a
  │ ^

The name `a` is not in scope here.
