cli/tests/snapshots/cli__run_file@main_empty.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/main_empty.gleam
---
STDOUT
Error at tests/inputs/main_empty.gleam (main:1)
  `todo` expression evaluated. This code has not yet been implemented.

STDERR
warning: Unimplemented function
  ┌─ /src/tests/inputs/main_empty.gleam:1:1
  │
1 │ pub fn main() {}
  │ ^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
