cli/tests/snapshots/cli__run_file@main_todo.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/main_todo.gleam
---
STDOUT
Error at tests/inputs/main_todo.gleam (main:2)
  `todo` expression evaluated. This code has not yet been implemented.

STDERR
warning: Todo found
  ┌─ /src/tests/inputs/main_todo.gleam:2:3
  │
2 │   todo
  │   ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
