cli/tests/snapshots/cli__run_file@smain_int_nil.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/smain_int_nil.gleam
---
STDOUT

STDERR
error: smain function has an invalid signature

`tests/inputs/smain_int_nil.smain` has the invalid signature `fn(Int) -> Nil` and can not be run.
Hint: Use one of the valid signatures for `smain` function:
  fn() -> a
  fn(String) -> a
  fn(List(String)) -> a
